# geo-localization-experiments

./: .gitignore  README.md  pyproject.toml
src/geo_localization_experiments/: geo_localization_experiments.ipynb  step1_preprocessing.py  step2_evaluation.py  step2_smoke_test.py  step3_roma_baseline.py
